--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #023757;
+  background: linear-gradient(#005386, #000b25);
 }
 
 #root {
