--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -26,7 +26,11 @@
 
 .search-button {
   width: 14%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-shadow: 0 2px 10px black;
+  text-decoration: none;
 }
 
 .search > label {
