Add styling and conditional styling to city weather page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,46 @@
 .home-logo {
   height: 50%;
+  margin-top: 5vh;
+}
+
+.city-header {
+  height: 7vh;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  box-sizing: border-box;
+}
+
+.city-header-items {
+  height: 100%;
+  width: 62%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: clamp(0.8rem, 2vw, 1.8rem);
+  text-align: center;
+  margin-left: 1%;
+}
+
+.city-header-items > img {
+  height: 100%;
+}
+
+.city-header-items > h1 > span {
+  text-transform: capitalize;
 }
 
 @media screen and (max-width: 52rem) {
   .home-logo {
     height: 40%;
+  }
+}
+
+@media screen and (max-width: 31rem) {
+  .city-header-items {
+    width: 75%;
   }
 }
