--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,9 @@
 .city-header {
   height: 7vh;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: rgba(255, 255, 255, 0.5);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(8px);
@@ -13,7 +16,6 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-sizing: border-box;
   font-size: clamp(0.8rem, 2vw, 1.8rem);
-  text-align: center;
   position: relative;
 }
 
@@ -21,6 +23,7 @@
   height: 100%;
   left: 1%;
   position: absolute;
+  cursor: pointer;
 }
 
 .city-header > h1 > span {
