--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: 'DynaPuff', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(#005386, #000b25);
+  background: linear-gradient(#00d3b7, #00267e);
 }
 
 * {
@@ -14,6 +14,8 @@ body {
 
 #root {
   height: 100%;
+  overflow: hidden;
+  position: relative;
 }
 
 button {
