--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,23 +7,16 @@
 }
 
 .home-bg {
-  height: 100%;
-  width: 100%;
+  height: 200%;
+  width: 200%;
   background-image: url('../../assets/pawprint-trail.png');
-  background-size: 90%;
-  scale: 1.2;
-  rotate: -40deg;
-  background-position: 50% 0%;
+  background-size: 80%;
+  top: -30%;
+  scale: 0.9;
+  rotate: -35deg;
   opacity: 0.5;
   position: absolute;
   z-index: -1;
-}
-
-@media screen and (max-width: 89rem) {
-  .home-bg {
-    height: 150%;
-    width: 150%;
-  }
 }
 
 @media screen and (max-width: 52rem) {
